@@ -19,10 +19,10 @@ INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'orgmgr_cmd_edit', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'orgmgr_cmd_update', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'orgmgr_cmd_delete', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'orgmgr_cmd_list', '', @moduleId);
-INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'passwordmgr_cmd_edit', '', @moduleId);
-INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'passwordmgr_cmd_update', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'passwordmgr_cmd_retrieve', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'passwordmgr_cmd_forgot', '', @moduleId);
+INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'userpasswordmgr_cmd_edit', '', @moduleId);
+INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'userpasswordmgr_cmd_update', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'permissionmgr_cmd_add', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'permissionmgr_cmd_insert', '', @moduleId);
 INSERT INTO permission VALUES ({SGL_NEXT_ID}, 'permissionmgr_cmd_edit', '', @moduleId);
@@ -164,11 +164,11 @@ SELECT @permissionId := permission_id FROM permission WHERE name = 'loginmgr_cmd
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
 SELECT @permissionId := permission_id FROM permission WHERE name = 'loginmgr_cmd_logout';
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
-SELECT @permissionId := permission_id FROM permission WHERE name = 'passwordmgr_cmd_edit';
+SELECT @permissionId := permission_id FROM permission WHERE name = 'userpasswordmgr_cmd_edit';
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
-SELECT @permissionId := permission_id FROM permission WHERE name = 'passwordmgr_cmd_redirectToEdit';
+SELECT @permissionId := permission_id FROM permission WHERE name = 'userpasswordmgr_cmd_update';
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
-SELECT @permissionId := permission_id FROM permission WHERE name = 'passwordmgr_cmd_update';
+SELECT @permissionId := permission_id FROM permission WHERE name = 'userpasswordmgr_cmd_redirectToEdit';
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
 SELECT @permissionId := permission_id FROM permission WHERE name = 'preferencemgr_cmd_edit';
 INSERT INTO role_permission VALUES ({SGL_NEXT_ID}, 2, @permissionId);
