@@ -1,7 +1,7 @@
 
 <form name="account" method="post" flexy:ignore id="account">
     <h1 class="pageTitle">{translate(pageTitle)}</h1>
-    <span flexy:if="msgGet()">{msgGet()}</span> 
+    <span flexy:if="msgGet()">{msgGet()}</span>
     {if:user} <!-- /////////////////////    SUMMARY     ////////////////////// -->
 
     <table class="narrow">
@@ -31,7 +31,7 @@
         <tr>
             <td class="fieldName">{translate(#My Profile#)}</td>
             <td align="center">
-                <input type="button" name="edit" class="wideButton" value="{translate(#view profile#)}" 
+                <input type="button" name="edit" class="wideButton" value="{translate(#view profile#)}"
                     onclick="document.location.href='{makeUrl(#viewProfile#,#account#,#user#)}'" />
             </td>
         </tr>
@@ -39,7 +39,7 @@
         <tr>
             <td class="fieldName">{translate(#Preferences#)}</td>
             <td align="center">
-                <input type="button" name="edit" class="wideButton" value="{translate(#edit preferences#)}" 
+                <input type="button" name="edit" class="wideButton" value="{translate(#edit preferences#)}"
                     onclick="document.location.href='{makeUrl(##,#userpreference#,#user#)}'" />
             </td>
         </tr>
@@ -47,8 +47,8 @@
         <tr>
             <td class="fieldName">{translate(#Password#)}</td>
             <td align="center">
-                <input type="button" name="edit" class="wideButton" value="{translate(#change password#)}" 
-                   onclick="javascript:document.location.href='{makeUrl(#edit#,#password#,#user#)}'" /> 
+                <input type="button" name="edit" class="wideButton" value="{translate(#change password#)}"
+                   onclick="javascript:document.location.href='{makeUrl(#edit#,#userpassword#,#user#)}'" />
             </td>
         </tr>
     </table>
